# ais-forwarder-rs

./: Cargo.toml  LICENSE  README.md  ais-forwarder.ini
ais-forwarder/: Cargo.toml  config.ini.demo
ais-forwarder/src/: cache.rs  location.rs  main.rs
common/: Cargo.toml
common/src/: buffer.rs  lib.rs
location-receiver/: Cargo.toml
location-receiver/src/: main.rs
src/: buffer.rs  cache.rs  main.rs
